@@ -1,5 +1,6 @@
 Version 2.02.89 - 
 ==================================
+  Improve man page style for lvcreate.
   Avoid recursive calls to dmeventd in its LVM plugins.
   Log dev name now returned to kernel for registering during cmirror CTR.
   Fix lv_info open_count test for disabled verify_udev_operations (2.02.86).
